--- a/MetrologicalServiceEnterprise.View/Pages/AddEmployeePage.xaml
+++ b/MetrologicalServiceEnterprise.View/Pages/AddEmployeePage.xaml
@@ -5,8 +5,76 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:MetrologicalServiceEnterprise.View.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pagesViewModel="clr-namespace:MetrologicalServiceEnterprise.ViewModel.PagesViewModel;assembly=MetrologicalServiceEnterprise.ViewModel"
+    d:DataContext="{d:DesignInstance Type=pagesViewModel:AddEmployeePageVM}"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    Background="White"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <StackPanel
+            Width="250"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <Grid>
+                <Label
+                    Height="30"
+                    HorizontalAlignment="Left"
+                    Content="Имя" />
+                <TextBox
+                    Width="150"
+                    Height="30"
+                    HorizontalAlignment="Right"
+                    Text="{Binding EmployeeCreateDto.FirstName}" />
+            </Grid>
+            <Grid>
+                <Label
+                    Height="30"
+                    HorizontalAlignment="Left"
+                    Content="Фамилия" />
+                <TextBox
+                    Width="150"
+                    Height="30"
+                    HorizontalAlignment="Right"
+                    Text="{Binding EmployeeCreateDto.LastName}" />
+            </Grid>
+            <Grid>
+                <Label
+                    Height="30"
+                    HorizontalAlignment="Left"
+                    Content="Отчество" />
+                <TextBox
+                    Width="150"
+                    Height="30"
+                    HorizontalAlignment="Right"
+                    Text="{Binding EmployeeCreateDto.Patronymic}" />
+            </Grid>
+            <Grid>
+                <Label
+                    Height="30"
+                    HorizontalAlignment="Left"
+                    Content="Email" />
+                <TextBox
+                    Width="150"
+                    Height="30"
+                    HorizontalAlignment="Right"
+                    Text="{Binding EmployeeCreateDto.Email}" />
+            </Grid>
+            <Grid>
+                <Label
+                    Height="30"
+                    HorizontalAlignment="Left"
+                    Content="Начальник" />
+                <TextBox
+                    Width="150"
+                    Height="30"
+                    HorizontalAlignment="Right"
+                    Text="{Binding EmployeeCreateDto.ChiefId}" />
+            </Grid>
+            <Button
+                Height="30"
+                Command="{Binding AddEmployeeCommand}"
+                Content="Добавить" />
+        </StackPanel>
+    </Grid>
 </UserControl>
